# minimal-onnx-whisper-openvino

./: .gitignore  CMakeLists.txt  generate-token-map.mjs  minimal_whisper.cc
cmake/fftw/: fftw.cmake
cmake/libsndfile/: libsndfile.cmake
cmake/onnxruntime/: onnxruntime.cmake
cmake/openvino/: openvino.cmake
